--- a/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
+++ b/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="3.0.84" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.7" />
+    <PackageReference Include="System.Net.Security" Version="4.3.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Application\SFA.DAS.Rofjaa.Application.csproj" />
